fix: [CDS-33902]: Gear alignments for manifest details (#7449)
* fix: [CDS-33902]: Aligned Gear for Manifest Chart Name and Chart Version

* fix: [CDS-33902]: code fix

* fix: [CDS-33902]: added css class

* fix: [CDS-33902]: gear alignment for menifests

--- a/src/modules/70-pipeline/components/ManifestSelection/ManifestWizardSteps/HelmWithGIT/HelmWithGIT.module.scss
+++ b/src/modules/70-pipeline/components/ManifestSelection/ManifestWizardSteps/HelmWithGIT/HelmWithGIT.module.scss
@@ -30,6 +30,7 @@
     margin-top: var(--spacing-medium) !important;
   }
   .runtimeInput {
+    align-items: center;
     display: grid;
     grid-template-columns: 4fr 1fr;
   }
