--- a/src/modules/70-pipeline/components/ManifestSelection/ManifestWizardSteps/ManifestDetails/ManifestDetails.module.scss
+++ b/src/modules/70-pipeline/components/ManifestSelection/ManifestWizardSteps/ManifestDetails/ManifestDetails.module.scss
@@ -59,6 +59,7 @@
   width: 300px;
 }
 .runtimeInput {
+  align-items: center;
   display: grid;
   grid-template-columns: 4fr 1fr;
 }
